src/objects/QC_History__c.object
<CustomObject>
    <description>QC: Tracking QC fields history.</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QC__c</fullName>
        <label>QC</label>
        <referenceTo>QC__c</referenceTo>
        <relationshipName>QC_Score_Comments_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC_Score_Comments_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QC History</label>
    <nameField>
        <displayFormat>QCH-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>